<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VideoLlamada">

    <TextView
        android:id="@+id/VideoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/coolveticarg"
        android:text="@string/VideoLlamadaTitulo"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/VideoInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/VideoLlamadaCuerpo"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/conferenceName"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:fontFamily="@font/robotoregular"
        android:hint="@string/VideoCodigo" />

    <Button
        android:id="@+id/ButonVideo"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/group_24"
        android:onClick="onButtonClick"
        android:text="@string/VideoLlamadaBoton" />

    <Button
        android:id="@+id/ButonRegresa"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/regresar_24"
        android:onClick="onButtonClick"
        android:text="@string/VideoLlamadaRegresar" />

    <Switch
        android:id="@+id/language_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Español / English" />

</LinearLayout>