<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioDeSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TituloLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="60dp"
            android:drawableLeft="@drawable/fire_extinguisher"
            android:fontFamily="@font/shermandisplay"
            android:text="@string/Titulo"
            android:textColor="@color/red"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/QueSomos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/coolveticarg"
            android:text="@string/QueSomos"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/SubTituloEnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/robotomedium"
            android:text="@string/SubTituloDelLogin"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:hint="@string/emaillogin"
                android:padding="15dp"
                android:textSize="15dp"
                android:background="@drawable/edittext_custom"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_custom"
                android:hint="@string/ContraLogin"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/rounded_button"
            android:text="@string/InicioSesion" />

        <TextView
            android:id="@+id/textoBajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AunNoTeR"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"/>

        <Switch
            android:id="@+id/language_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Español / English"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
