<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TituloRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/coolveticarg"
            android:gravity="center"
            android:text="@string/TituloDeRegistro"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/SubTemaRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotomedium"
            android:text="@string/SubTemaDeRegistro"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsuarioRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UsuaRe">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_custom"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CorreoRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CorreoReg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_custom"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ContrasenaRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ContraRe">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_custom"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ConfirmarRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ConfRe">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_custom"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/rounded_button"
            android:text="@string/BotonRe" />

        <TextView
            android:id="@+id/textoBajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/IniciaRe"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/language_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Español / English"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>