<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Productos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FireWorld Seguridad"
            android:textSize="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:fontFamily="@font/shermandisplay"
            android:textColor="@color/red"
            android:drawableLeft="@drawable/fire_extinguisher"/>

        <TextView
            android:id="@+id/ProductosText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:fontFamily="@font/coolveticarg"
            android:text="@string/TituloProductos"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingTop="15dp">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="110dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/polvo_incendios"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/BotonExtintorPQS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="25dp"
                android:drawableTop="@drawable/polvo_24"
                android:text="@string/PolvoSecoBtn"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="110dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/co2_incendios"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/BotonExtintorCO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="25dp"
                android:drawableTop="@drawable/co2_24"
                android:text="@string/DioxidoDeCarbonoBtn"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="105dp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/acetato_de_potasio_incendios" />

            <Button
                android:id="@+id/BotonExtintorADP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="25dp"
                android:drawableTop="@drawable/water_drop_24"
                android:text="@string/AcetatoBtn"
                android:textSize="16sp" />
        </LinearLayout>
        <Button
            android:id="@+id/BotonRegresar"
            android:layout_width="match_parent"
            style="@style/MenuButton"
            android:onClick="onButtonClick"
            android:text="@string/VideoLlamadaRegresar"
            android:drawableLeft="@drawable/regresar_24"/>

        <Switch
            android:id="@+id/language_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Español / English"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>